<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next_note">Next</string>
    <string name="action_send_email">Send as email</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer   -->
    <string name="menu_communicate">Communicate</string>
    <string name="menu_item_note">Notes</string>
    <string name="menu_item_course">Courses</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_send">Send</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <!-- Setting Activity-->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="pref_general_header">General</string>
    <string name="sync_header">Sync</string>

    <!-- General Preferences -->
    <string name="pref_display_name_key">user_display_name</string>
    <string name="pref_display_name_title">Display name</string>
    <string name="pref_display_name_default">Your name</string>

    <string name="pref_user_email_key" >user_email</string>
    <string name="pref_user_email_title" >Email</string>
    <string name="pref_user_email_default" >email@domain.com</string>

    <string name="pref_user_favorite_social_key">user_favorite_social</string>
    <string name="pref_user_favorite_social_title">Favorite social network</string>
    <string name="pref_favorite_social_default">https://facebook.com</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
