<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_general_header">

        <EditTextPreference
            android:key="@string/pref_display_name_key"
            android:title="@string/pref_display_name_title"
            app:defaultValue="@string/pref_display_name_default"
            app:key="@string/pref_display_name_key"
            app:title="@string/pref_display_name_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="@string/pref_user_email_key"
            android:title="@string/pref_user_email_title"
            app:defaultValue="@string/pref_user_email_default"
            app:key="@string/pref_user_email_key"
            app:title="@string/pref_user_email_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="@string/pref_user_favorite_social_key"
            android:title="@string/pref_user_favorite_social_title"
            app:defaultValue="@string/pref_favorite_social_default"
            app:entries="@array/pref_favorite_social_entries"
            app:entryValues="@array/pref_favorite_social_values"
            app:key="@string/pref_user_favorite_social_key"
            app:title="@string/pref_user_favorite_social_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>